@@ -40,5 +40,6 @@
 
 int pcpdecrypt(char *id, int useid, char *infile, char *outfile, char *passwd, int verify);
 int pcpencrypt(char *id, char *infile, char *outfile, char *passwd, plist_t *recipient, int signcrypt, int armor, int anon);
+void pcpchecksum(char **files, int filenum);
 
 #endif /*  _HAVE_ENCRYPTION_H */
